fix horizontal scrollbar appear when clicking page number dropdown button

--- a/css/quan-ly-bai-viet.css
+++ b/css/quan-ly-bai-viet.css
@@ -18,7 +18,14 @@ body {
 }
 
 .btn-group .dropdown-menu {
-    width: 52.7px;
+    left: auto;
+    right: 0;
+}
+
+#page-number-input {
+    width: 75%; 
+    margin: auto; 
+    padding: 0.3rem;
 }
 
 table tbody [class^="article"], [class*="article"] {
